k8s/gabbology/deployment.yaml
# Needs the ghcr.io access token to be provision
# in advanced in the namespace of this deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gabbology
  labels:
    app.kubernetes.io/name: gabbology
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: gabbology
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: gabbology
      app.kubernetes.io/component: server
      app.kubernetes.io/part-of: gabbology
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gabbology
        app.kubernetes.io/version: "1.0.0"
        app.kubernetes.io/component: server
        app.kubernetes.io/part-of: gabbology
    spec:
      containers:
        - name: gabbology
          image: ghcr.io/gabrielbernard/gabbology:1.0.0
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 8000
      imagePullSecrets:
        - name: gabbology-gh-packages
