k8s/gabbology/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gabbology
  namespace: default
spec:
  selector:
    app.kubernetes.io/name: gabbology
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: gabbology
  ports:
  - port: 80
    targetPort: 8000
